--- a/src/models/train_and_transfer_MNIST.ipynb
+++ b/src/models/train_and_transfer_MNIST.ipynb
@@ -9,19 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras.datasets import mnist\n",
-    "import matplotlib.pyplot as plt\n",
-    "# load (downloaded if needed) the MNIST dataset\n",
-    "(X_train, y_train), (X_test, y_test) = mnist.load_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -32,6 +20,18 @@
      ]
     }
    ],
+   "source": [
+    "from keras.datasets import mnist\n",
+    "import matplotlib.pyplot as plt\n",
+    "# load (downloaded if needed) the MNIST dataset\n",
+    "(X_train, y_train), (X_test, y_test) = mnist.load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#%%\n",
     "import numpy\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,11 +412,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1, 28, 28)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import io\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "\n",
+    "p = Image.open('./_MNIST_/digits_num_0_label_2.png')\n",
+    "print p.mode\n",
+    "x = np.array([np.array(p)])\n",
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "\n",
     "x = np.array([np.array(Image.open(fname)) for fname in filelist])"
    ]
   },
@@ -442,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,6 +487,26 @@
     "# show_img(img_to_add)\n",
     "\n",
     "img, label = process_img(img_to_add, label_to_add)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 28, 28)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img.shape"
    ]
   },
   {
@@ -493,6 +547,70 @@
    ],
    "source": [
     "model_less.fit(img, label, validation_data=(X_test, y_test), epochs=1, batch_size=1, verbose=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### image encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import base64\n",
+    "\n",
+    "IMAGE_WIDTH = 28\n",
+    "IMAGE_HEIGHT = 28\n",
+    "IMAGE_DTYPE = \"int8\"\n",
+    "\n",
+    "def base64_encode_image(a):\n",
+    "\t# base64 encode the input NumPy array\n",
+    "\treturn base64.b64encode(a).decode(\"utf-8\")\n",
+    " \n",
+    "def base64_decode_image(a, dtype, shape): \n",
+    "\t# convert the string to a NumPy array using the supplied data\n",
+    "\t# type and target shape\n",
+    "\ta = np.frombuffer(base64.decodestring(a), dtype=dtype)\n",
+    "\ta = a.reshape(shape)\n",
+    " \n",
+    "\t# return the decoded image\n",
+    "\treturn a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1048"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_e = base64_encode_image(x[0])\n",
+    "len(x_e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = base64_decode_image(x_e, dtype = IMAGE_DTYPE, shape=(28,28))"
    ]
   },
   {
