added the labeling API

--- a/src/notebooks/Inception V3.ipynb
+++ b/src/notebooks/Inception V3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "'1.2.2'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,22 +44,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A local file was found, but it seems to be incomplete or outdated.\n",
-      "Downloading data from https://github.com/fchollet/deep-learning-models/releases/download/v0.2/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5\n"
+      "WARNING:tensorflow:From /Users/runshengsong/anaconda3/envs/insight/lib/python2.7/site-packages/keras/backend/tensorflow_backend.py:1047: calling reduce_prod (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "keep_dims is deprecated, use keepdims instead\n"
      ]
     }
    ],
    "source": [
-    "topless_model = InceptionV3(include_top=False, \n",
-    "                                                    weights='imagenet',\n",
-    "                                                    input_shape=(299, 299, 3))"
+    "base = InceptionV3(include_top=True, weights='imagenet',input_shape=(299, 299, 3))"
    ]
   },
   {
@@ -561,6 +560,66 @@
    "outputs": [],
    "source": [
     "topless_model.save('topless_model.h5')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Label directory of images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 20 images belonging to 2 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_folder = '/Users/runshengsong/data/catVdog_less/train'\n",
+    "\n",
+    "iamge_data_generator =  ImageDataGenerator(\n",
+    "    preprocessing_function = preprocess_input\n",
+    "  )\n",
+    "\n",
+    "\n",
+    "train_generator = iamge_data_generator.flow_from_directory(\n",
+    "    image_folder,\n",
+    "    target_size=(299, 299),\n",
+    "    batch_size=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = base.predict_generator(train_generator, val_samples=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print len(res)"
    ]
   },
   {
